Update comment from 'Country Search' to 'Country Name Search'

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Noto Sans', 
       <div id="phoneResult" class="result"></div>
     </div>
 
-    <!-- Country Search -->
+    <!-- Country Name Search -->
     <div class="card">
       <div class="card-header">🌍 Search Countries</div>
       <div class="input-group">
